Fix a bug that caused annotation overlays to be too small for short messages

--- a/styles/annotation-overlay.less
+++ b/styles/annotation-overlay.less
@@ -14,8 +14,9 @@
   margin-top: 3px;
   padding: @component-padding / 2;
 
+  min-width: 300px;
   width: 50%;
-  
+
   hr {
     border-top: 1px solid #888;
     margin: 5px 0;
